Corrected div alignments and updated image urls

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ font-family: 'VT323', monospace;
 #wrapper {
   height: 100vh;
   overflow-y: hidden;
+  overflow-x: hidden;
+
   width:100vw;
   margin:0;
 }
@@ -42,6 +44,7 @@ display:inline-block;
 
 .leftRandom{
 background-image: url('images/surface.png');
+background-size: contain;
 width:50px;
 height:50px;
 position: relative;
@@ -77,6 +80,7 @@ display:inline-block;
 	margin: 0 auto;
 }
 
+
 .intro{
 	position: absolute;
 	width: 20vw;
@@ -89,13 +93,19 @@ display:inline-block;
 #player{
 	width:90px;
 	height:100px;
-	background-image: url('images/character1.png');
+	background-image: url('images/character1.gif');
 	background-repeat: no-repeat;
+	background-size: contain;
 	z-index:+2;
 	position: fixed;
 	top:20vh;
 	left:45vw;
 	display:none;
+}
+
+.flipImage{
+	-webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
 }
 
 .letterBlock{
@@ -131,5 +141,22 @@ display:inline-block;
 	top:10px;
 	float:right;
 	right:10px;
+	font-size: 30px;
+	z-index: +10;
+	background-color: black;
+}
+
+.gameover{
+	width:30vw;
+	height:200px;
+	display: none;
+	position: fixed;
+	background-color: black;
+	color:white;
+	border:2px dashed white;
+	z-index: +10;
+	left:35vw;
+	top:25vh;
+	text-align: center;
 }
 
